# ProdGenius-AI

./: .gitignore  Dockerfile  LICENSE  README.md  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: production.yml  staging.yml
Data_Pipeline/: .gitignore  Dockerfile  README.md  data-requirements.txt  docker-compose.yaml
Data_Pipeline/dags/: airflow.py
artifact/: product_uuids.json
config/: config.yaml  prompts.yaml
evaluation/metrics/: base-scores.json  bias-scores.json
evaluation/results/: base-results.parquet  base.parquet
evaluation/testset/: 27dde6dd-50d7-4e29-bed5-f3ba0bff9ab5.parquet  290aa752-6bb4-4e44-84dc-f07d3baec95f.parquet  41327bb0-a7a9-476c-a537-4c7a7a558e80.parquet  52698d83-cca8-4de3-a2ff-269c4e7a2ec4.parquet  5ec736c5-7348-4dd6-a442-f44d17e85078.parquet  6125f9e3-5fb2-4f75-9fc7-9212f66f53fa.parquet  64d96e6d-20b5-4404-8001-37e879041ecb.parquet  6790af90-f31b-4035-9ee4-cd3f26d93fc6.parquet  72584877-cb15-4d7f-923d-d3c2391fee2e.parquet  733e4fec-7678-420f-a1b7-60eb7fd1cb75.parquet  81b1c074-4be7-41a4-b214-2b1f12b873b9.parquet  (+17 more)
notebooks/: 01_play_langchain_RAG.ipynb  02_play_langgraph_RAG.ipynb  03_improve_langgraph_chatbot.ipynb  04_play_postgres_integration.ipynb  06_play_rag_evaluation.ipynb  trials.ipynb
readme/: 00_ML_PIPELINES.md  01_BASE_MODEL.md  02_TEST_INGESTION.md  03_MODEL_EVALUATION.md  04_BIAS_DETECTION.md  API_README.md  CICD_WORKFLOW.MD  COST_ANALYSIS.md  FOLDER_STRUCTURE.md  LOGGING_MONITORING.MD  SETUP.md  VERSION_ROLLBACK.md
src/: app.py  logger.py  main.py  serve.py
src/main/: graph.py  (+4 more)
tests/: test.py
(+22 files in other folders)
