[tool.poetry]
name = "ecom-chatbot"
version = "0.1.0"
description = ""
authors = ["Henil Gajjar <henilgajjar08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
beautifulsoup4 = "^4.12.3"
faiss-cpu = "^1.9.0"
wandb = "^0.18.7"
pypdf = "^5.1.0"
python-dotenv = "^1.0.1"
langfuse = "^2.53.9"
streamlit = "^1.40.1"
ragas = "0.1.21"
nltk = "^3.9.1"
nest-asyncio = "^1.6.0"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"
dvc = "^3.56.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
datasets = "^3.1.0"
langchain-groq = "0.1.10"
google-cloud-bigquery = "^3.27.0"
google-api-python-client = "^2.153.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
db-dtypes = "^1.3.1"
langchain = "0.2.17"
langchain-core = "0.2.43"
langchain-community = "0.2.19"
email-validator = ">=2.0"
langgraph = "0.2.48"
langchain-huggingface = "0.0.3"
langchain-openai = "0.1.25"
cloud-sql-python-connector = "^1.13.0"
pg8000 = "^1.31.2"
sqlalchemy = "<2.0"
mlflow = "^2.17.2"
dagshub = "^0.3.44"
ensure = "^1.0.4"
python-box = "^7.2.0"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
flake8 = "^7.1.1"
pymsteams = "^0.2.3"
apache-airflow = "^2.10.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"